--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
             <version>6.14.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-support</artifactId>
+            <version>3.141.59</version>
+            <scope>test</scope>
+        </dependency>
 
 
     </dependencies>
